--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Nitinsai.github.io/Nitinsai_Portfolio/",
   "name": "personal_portfolio",
   "version": "0.1.0",
   "private": true,
