--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"homepage":"https://nitinsai381.github.io/Nitinsai_Portfolio/",
+"homepage":"https://nitinsai381.github.io/Nitinsai_Portfolio38/",
   "name": "personal_portfolio",
   "version": "0.1.0",
   "private": true,
